# ai_agent_principles

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.mcp  Dockerfile.worker  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: annotation_agent.py  comparison_agent.py  extraction_agent.py
app/api/: main.py
app/api/routes/: documents.py  health.py
app/config/: settings.py
app/mcp_client/: client.py
app/mcp_server/: server.py
app/monitoring/: tracing.py
app/schemas/: document.py  extraction.py
app/services/: blob_storage.py  document_intelligence.py  search.py
app/tools/: annotation_tools.py  comparison_tools.py  contract_tools.py
app/workers/: worker.py
app/workflow/: graph.py  orchestrator.py  state.py
docs/: README.md  index.md
docs/adr/: adr-001-agent-architecture.md  adr-002-service-bus-over-redis.md
docs/agents/: annotation.md  comparison.md  extraction.md  overview.md
docs/architecture/: c4-component.md  c4-container.md  c4-context.md  c4.md  overview.md  sequences.md
docs/azure/: overview.md  redis.md  service-bus.md  services.md
docs/introduction/: architecture-principles.md  requirements.md  vision.md
docs/langgraph/: orchestrator.md  workflow.md
docs/mcp/: overview.md  tool-design.md
docs/operations/: failure-handling.md  observability.md  scaling.md
kubernetes/: api-deployment.yaml  mcp-deployment.yaml  worker-deployment.yaml
tests/: test_health.py
