[project]
name = "enterprise-ai-document-platform"
version = "0.1.0"
description = "Reference implementation for an Azure multi-agent document processing platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langchain>=0.2.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-mcp-adapters>=0.1.0",
  "mcp>=1.0.0",
  "azure-identity>=1.17.0",
  "azure-storage-blob>=12.20.0",
  "azure-servicebus>=7.12.0",
  "azure-ai-documentintelligence>=1.0.0",
  "azure-search-documents>=11.5.0",
  "opentelemetry-api>=1.26.0",
  "opentelemetry-sdk>=1.26.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
